--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fitness Fuel</title>
+    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
